crates/solidity/testing/snapshots/bindings_output/mappings/nested/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:4:5]
    │
  4 │ ╭─▶     function get(address _addr1, uint256 _i) public view returns (bool) {
    ┆ ┆   
 14 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["NestedMapping" @ input.sol:1:10] (contract)
- Def: #2 ["nested" @ input.sol:2:57] (state var, type: address => uint256 => bool)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract NestedMapping {
   │          ──────┬──────  
   │                ╰──────── name: 1
 2 │     mapping(address => mapping(uint256 => bool)) public nested;
   │                                                         ───┬──  
   │                                                            ╰──── name: 2
───╯
